@@ -1,4 +1,6 @@
 Version 0.4-0
+  
+   *  Added async argument to .gpu()/.cuda()
 
    *  High-level mechanism for mallocPitch() and copying an R object to the memory.
 
